--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ benchmark/
 
 # =========================
 # Firebase Crashlytics
-# =========================
+# =========================i can
 crashlytics.properties
 fabric.properties
 
