--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
             <intent-filter>
                 <action android:name="androidx.appcompat.app.AppLocalesMetadataHolderService" />
             </intent-filter>
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
         </service>
 
         <!-- WorkManager initialization -->
